--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^0.13.0-beta.17",
-    "@aws-amplify/backend-cli": "^0.12.0-beta.19",
+    "@aws-amplify/backend": "^0.13.2",
+    "@aws-amplify/backend-cli": "^0.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
